# tess-website-lite

./: .gitignore  How to upload and make the website.docx  Makefile  README.md  get_statistics_values.py  make_statistic_plots.py  pelicanconf.py  pyproject.toml  tess_website_lite.yml
backup/: approved-programs.md  citizen_science.md  data_products.md  drn.md  instrument_information.md  summary.md  thank-you-for-mail.md
button/FlaskApp/: app.py
button/ipython/: Untitled.ipynb  tutorial.ipynb
button/test/: helper_codes.py  index_2panel.html  script_2panel.js  server.py  styles_vertical.css  where_is_TESS.py
content/news/: tess-news-jan25.md
content/pages/: approved-programs.md  christina.md  citizen_science.md  community.md  data-products.md  data_pipeline.md  data_products.md  documentation.md  drn.md  faq.md  helpdesk.md  instrument_information.md  new_proposing.md  outreach.md  proposing.md  proposing_basics.md  sector.md  statistics.md  summary.md  targets_per_sector.md  telescope_information.md  tuc.md  tutorial1.md  tutorial2.md
content/php/: submit.php
deleteme/: index_backup.html  news.html
htmlcontent/: statistics.html
htmlcontent/slides/: filetypes.slides.html  instrument.slides.html  proposing.slides.html
htmlcontent/statistics/: US_author_count.html  lead_author_affiliation.html  make_statistic_plots.py  papers_over_time.html
htmlcontent/tables/: approved-programs.table.html
scripts/: TESS_button.py  TESS_button_func.py  make-approved-programs.py  make_statistic_plots.py
tess_gifs_and_pngs/: pretty-tess-plots.ipynb
(+41 files in other folders)
