[tool.poetry]
name = "tess-website-lite"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.8.0"}
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
